crates/jarl/tests/integration/snapshots/integration__rules__select_ignore_interaction_with_rule_group.snap
---
source: crates/jarl/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--select\").arg(\"SUSP\").arg(\"--ignore\").arg(\"SUSP\").run().normalize_os_executable_name()"
---

success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --select SUSP --ignore SUSP
