crates/jarl/tests/integration/snapshots/integration__rules__select_rule_group-3.snap
---
source: crates/jarl/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--select\").arg(\"all_equal,SUSP\").run().normalize_os_executable_name()"
---

success: false
exit_code: 1
----- stdout -----
warning: all_equal
 --> test.R:3:1
  |
3 | !all.equal(x, y)
  | ---------------- If `all.equal()` is false, it will return a string and not `FALSE`.
  |
  = help: Wrap `all.equal()` in `isTRUE()`, or replace it by `identical()` if no tolerance is required.

Found 1 error.
1 fix is available with the `--fix --unsafe-fixes` option.

----- stderr -----

----- args -----
check . --select all_equal,SUSP
