crates/jarl/tests/integration/snapshots/integration__rules__selected_and_ignored.snap
---
source: crates/jarl/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--select\").arg(\"any_is_na\").arg(\"--ignore\").arg(\"any_is_na\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --select any_is_na --ignore any_is_na
